# coffee-processing-factory-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Cleaning/: DebrisRemover.h  FlotationTank.h
include/Core/: Batch.h  CoreTypes.h  Entity.h  Machine.h  Utils.h  Worker.h
include/Delivery/: DeliveryData.h  Driver.h  Vehicle.h
include/Harvest/: FarmPlot.h  Harvester.h
include/Milling/: DensitySorter.h  Huller.h  OpticalSorter.h
include/Packaging/: PackageUnit.h  PackagingMachine.h
include/Processing/: DryingBed.h  FermentationTank.h  PulpingMachine.h  WashingChannel.h  WeatherModel.h
include/Quality/: GradeResult.h  QualityInspector.h
include/Reception/: IntakeRecord.h  ReceptionClerk.h  ReceptionScale.h
include/Roasting/: Roaster.h
include/Sales/: Customer.h  Order.h
include/System/: EventLog.h  SimulationEngine.h  ThreadSafeQueue.h
include/Warehouse/: InventoryRecord.h  Warehouse.h
src/Cleaning/: DebrisRemover.cpp  FlotationTank.cpp
src/Core/: Batch.cpp  Machine.cpp  Utils.cpp  Worker.cpp
src/Delivery/: DeliveryData.cpp  Driver.cpp  Vehicle.cpp
src/Harvest/: FarmPlot.cpp  Harvester.cpp
src/Milling/: DensitySorter.cpp  Huller.cpp  OpticalSorter.cpp
src/Packaging/: PackagingMachine.cpp
src/Processing/: DryingBed.cpp  FermentationTank.cpp  PulpingMachine.cpp  WashingChannel.cpp  WeatherModel.cpp
src/Quality/: QualityInspector.cpp
src/Reception/: ReceptionClerk.cpp  ReceptionScale.cpp
src/Roasting/: Roaster.cpp
src/Sales/: Customer.cpp
src/System/: SimulationEngine.cpp
src/Warehouse/: Warehouse.cpp
